<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:theme="@style/DarkToolbarText">
    <item
        android:id="@+id/action_goto_activity_list"
        android:title="@string/action_goto_activity_list"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_activity_retrofit"
        android:title="@string/action_goto_activity_retrofit"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_activity_storage"
        android:title="@string/action_goto_activity_storage"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_activity_db"
        android:title="@string/action_goto_activity_db"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_activity_fragment"
        android:title="@string/action_goto_activity_fragment"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_goto_activity_nav"
        android:title="@string/action_goto_activity_nav"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
